# RealtimeNetworkingLibrary

./: .clang-format  .cmake-format  CMakeLists.txt  LICENSE
include/rnlib/: address.h  connection.h  cryptography.h  handshake.h  packet.h  result.h  socket.h  sockets.h  util.h
src/: .clang-format  address.c  address.cpp  address.h  connection.c  connection.cpp  cryptography.c  cryptography.cpp  handshake.c  handshake.cpp  packet.c  packet.cpp  socket.c  socket.cpp  socket.h  sockets.cpp
